--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "json2xml": "^0.1.3",
     "mongodb": "^3.0.3",
     "morgan": "~1.9.0",
     "nodemon": "^1.17.1",
