--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "json2xml": "^0.1.3",
+    "jsonwebtoken": "^8.2.0",
+    "localStorage": "^1.0.3",
     "mongodb": "^3.0.3",
     "morgan": "~1.9.0",
+    "node-localstorage": "^1.3.1",
     "nodemon": "^1.17.1",
     "serve-favicon": "~2.4.5",
-    "twig": "~0.10.3"
+    "twig": "~0.10.3",
+    "useragent": "^2.3.0"
   }
 }
